# DeadlineDinosaur

./: .gitignore  BUGFIX_PROJECTION_MATRIX.md  DASHGAUSSIAN_IMPLEMENTATION.md  DEBUG_README.md  LICENSE  MANIFEST.in  QUICK_START_FFT.md  README.md  RESOLUTION_SCHEDULER.md  TRAINING_SCHEDULER_IMPLEMENTATION.md  convert_gs.py  env_1.yml  environment.yml  example_fft_scheduler.py  example_metrics.py  example_train.py  full_eval.py  inspect_pointcloud.py  kernel_test.py  litegs_info.py  process_dataset.sh  profiler.py  run_all_scenes.py  run_metrics_all.py  setup.py  setup_lanczos.sh  test.py  test_dashgaussian_fix.py  test_paper_progression_simple.py  test_projection_matrix_fix.py  test_rendering_components.py  test_resolution_scheduler.py  test_training_scheduler.py
deadlinedino/: __init__.py  arguments.py  data.py  debug_utils.py
deadlinedino/config/: __init__.py
deadlinedino/io_manager/: __init__.py  checkpoint.py  colmap.py  ply.py  slam.py
deadlinedino/render/: __init__.py
deadlinedino/scene/: __init__.py  cluster.py  point.py
deadlinedino/submodules/gaussian_raster/: binning.cu  binning.h  raster.cu  raster.h  transform.cu
deadlinedino/submodules/gaussian_raster2/: README.md  binning.cu  compact.cu  compact.h  setup.py  (+2 more)
deadlinedino/submodules/gaussian_raster3/: CMakeLists.txt  cuda_errchk.cpp  debug_launcher.py  ext_cuda.cpp  raster.cu  raster.h  setup.py  speedy_splat.cuh  transform.cu
deadlinedino/training/: __init__.py  densify.py  optimizer.py  schedule_utils.py  scheduling_utils.py  trainer.py
deadlinedino/utils/: __init__.py  platform.py  spherical_harmonics.py  statistic_helper.py  wrapper.py
scripts/: ablations_culling.py  ablations_densify.py  full_eval_fast.py  full_eval_resolution.py  profiler_3dgs.py  txt2csv.py
(+1 files in other folders)
